Add main to index.html

--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="page-header">
     <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/150x100">
+    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -31,6 +31,121 @@
       </div>
     </nav>
   </header>
+
+  <main class="page-main">
+    <section class="intro">
+      <div class="intro__wrapper">
+        <img class="page-intro__background-image" src="http://placehold.it/150x100" alt="">
+        <section class="download-app">
+          <div class="download-app__wrapper">
+            <a class="btn btn--download" href="#">Скачать приложение</a>
+            <div class="download-app__platforms">
+              <div class="platform platform--Apple"></div>
+              <div class="platform platform--Android"></div>
+              <div class="platform platform--Windows"></div>
+            </div>
+            <p class="download-app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+          </div>
+        </section>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="features__title">
+        <div class="container">
+          <h1 class="features__heading">Устали от серости мегаполиса?</h1>
+          <h1 class="features__heading">Нам есть, что вам предложить!</h1>
+        </div>
+      </div>
+      <div class="features__items">
+        <div class="features__wrapper">
+          <div class="features-item">
+            <h2 class="features-item__title">Поднимает настроение</h2>
+            <p class="features-item__text">Приложение позволит вам победить осеннюю хандру и деперессию буквально в несколько кликов!</p>
+          </div>
+          <div class="features-item">
+            <h2 class="features-item__title">Меняет мир вокруг</h2>
+            <p class="features-item__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+          </div>
+          <div class="features-item">
+            <h2 class="features-item__title">Заводит новых друзей</h2>
+            <p class="features-item__text">Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+          </div>
+        </div>
+      </div>
+      <img class="features-image" src="http://placehold.it/150x100" alt="">
+    </section>
+
+    <section class="reviews">
+      <div class="reviews__wrapper slider">
+        <h2 class="visually-hidden">Отзывы о нас</h2>
+        <div class="reviews__list  slider__list">
+          <blockquote class="reviews__item  slider__item">
+            <cite class="reviews__author-name">Николай Петров</cite>
+            <p class="reviews__text">Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился сосвоей будущей женой в комментариях к выложенной фотографии!</p>
+          </blockquote>
+          <blockquote class="reviews__item  slider__item">
+            <cite class="reviews__author-name"></cite>
+            <p class="reviews__text"></p>
+          </blockquote>
+          <blockquote class="reviews__item  slider__item">
+            <cite class="reviews__author-name"></cite>
+            <p class="reviews__text"></p>
+          </blockquote>
+        </div>
+        <p class="reviews__toggles slider__toggles">
+          <button class="slider__toggle slider__toggle__control--active" type="button">1</button>
+          <button class="slider__toggle" type="button">2</button>
+          <button class="slider__toggle" type="button">3</button>
+        </p>
+      </div>
+    </section>
+
+    <section class="price">
+      <div class="price-wrapper">
+        <h2 class="visually-hidden">Цени на услуги PINK</h2>
+        <table class="price-table">
+          <tr>
+            <td class="price-table__header">
+              <div class="price-table__flag">Хит</div>
+              <p class="price-table__title">Анлим</p>
+              <p class="price-table__cost">9,99 USD</p>
+            </td>
+            <td class="price-table__header">
+              <div class="price-table__flag price-table__flag--hit">Хит</div>
+              <p class="price-table__title">Стандарт</p>
+              <p class="price-table__cost">3,99 USD</p>
+            </td>
+            <td class="price-table__header">
+              <div class="price-table__flag">Хит</div>
+              <p class="price-table__title">База</p>
+              <p class="price-table__cost">1,99 USD</p>
+            </td>
+          </tr>
+          <tr>
+            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
+            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
+            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
+          </tr>
+          <tr>
+            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
+            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
+            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
+          </tr>
+          <tr>
+            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
+            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
+            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
+          </tr>
+        </table>
+        <p class="price__toggles slider__toggles">
+          <button class="slider__toggle" type="button">1</button>
+          <button class="slider__toggle slider__toggle__control--active" type="button">2</button>
+          <button class="slider__toggle" type="button">3</button>
+        </p>
+      </div>
+    </section>
+  </main>
 
 </body>
 
