Add footer to index.html

--- a/source/index.html
+++ b/source/index.html
@@ -147,6 +147,33 @@
     </section>
   </main>
 
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <section class="contacts">
+        <div class="contacts__container">
+          <h1 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h1>
+          <div class="contacts-items">
+            <div class="contacts-item">
+              <h2 class="contacts-item__title">Звоните:</h2>
+              <p class="contacts-item__contact contacts-item__contact--tel">+7 (812) 555-66-66</p>
+            </div>
+            <div class="contacts-item">
+              <h2 class="contacts-item__title">Пишите:</h2>
+              <p class="contacts-item__contact contacts-item__contact--mail">mail@htmlacademy.ru</p>
+            </div>
+            <div class="contacts-item">
+              <h2 class="contacts-item__title">Приезжайте в гости:</h2>
+              <p class="contacts-item__contact contacts-item__contact--addr">ул. Большая Конюшенная, 19/8</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="map" id="map-canvas"></div>
+    </div>
+
+  </footer>
+
 </body>
 
 </html>
