--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,9 @@
 
 <body>
   <header class="page-header">
+    <h1 class="visually-hidden">Веб-страница PINK</h1>
     <a class="page-header__logo">
-    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="">
+    <img class="page-header__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -33,12 +34,13 @@
   </header>
 
   <main class="page-main">
-    <section class="intro">
+    <section class="page-intro">
+      <h2 class="visually-hidden">Наше приложение!</h2>
       <div class="intro__wrapper">
-        <img class="page-intro__background-image" src="http://placehold.it/150x100" alt="">
+        <img class="page-intro__image" src="http://placehold.it/150x100" alt="PINK">
         <section class="download-app">
           <div class="download-app__wrapper">
-            <a class="btn btn--download" href="#">Скачать приложение</a>
+            <a class="download-app__btn" href="#">Скачать приложение</a>
             <div class="download-app__platforms">
               <div class="platform platform--Apple"></div>
               <div class="platform platform--Android"></div>
@@ -51,10 +53,11 @@
     </section>
 
     <section class="features">
+      <h2 class="visually-hidden">Функции PINK</h2>
       <div class="features__title">
-        <div class="container">
-          <h1 class="features__heading">Устали от серости мегаполиса?</h1>
-          <h1 class="features__heading">Нам есть, что вам предложить!</h1>
+        <div class="features__container">
+          <h2 class="features__heading">Устали от серости мегаполиса?</h2>
+          <h2 class="features__heading">Нам есть, что вам предложить!</h2>
         </div>
       </div>
       <div class="features__items">
@@ -73,7 +76,7 @@
           </div>
         </div>
       </div>
-      <img class="features-image" src="http://placehold.it/150x100" alt="">
+      <img class="features__image" src="http://placehold.it/150x100" alt="PINK">
     </section>
 
     <section class="reviews">
@@ -94,7 +97,7 @@
           </blockquote>
         </div>
         <p class="reviews__toggles slider__toggles">
-          <button class="slider__toggle slider__toggle__control--active" type="button">1</button>
+          <button class="slider__toggle slider__toggle--active" type="button">1</button>
           <button class="slider__toggle" type="button">2</button>
           <button class="slider__toggle" type="button">3</button>
         </p>
@@ -102,7 +105,7 @@
     </section>
 
     <section class="price">
-      <div class="price-wrapper">
+      <div class="price__wrapper">
         <h2 class="visually-hidden">Цени на услуги PINK</h2>
         <table class="price-table">
           <tr>
@@ -123,24 +126,24 @@
             </td>
           </tr>
           <tr>
-            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
-            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
-            <td class="price-table__service"><span class="service-mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
           </tr>
           <tr>
-            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
-            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
-            <td class="price-table__service"><span class="service-mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--yes"><span class="price-table__service--mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--yes"><span class="price-table__service--mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--no"><span class="price-table__service--mobile">Смайлики</span></td>
           </tr>
           <tr>
-            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
-            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
-            <td class="price-table__service"><span class="service-mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
           </tr>
         </table>
         <p class="price__toggles slider__toggles">
           <button class="slider__toggle" type="button">1</button>
-          <button class="slider__toggle slider__toggle__control--active" type="button">2</button>
+          <button class="slider__toggle slider__toggle--active" type="button">2</button>
           <button class="slider__toggle" type="button">3</button>
         </p>
       </div>
@@ -148,30 +151,29 @@
   </main>
 
   <footer class="page-footer">
+    <h2 class="visually-hidden">Связаться с нами:</h2>
     <div class="page-footer__wrapper">
       <section class="contacts">
         <div class="contacts__container">
-          <h1 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h1>
-          <div class="contacts-items">
-            <div class="contacts-item">
-              <h2 class="contacts-item__title">Звоните:</h2>
-              <p class="contacts-item__contact contacts-item__contact--tel">+7 (812) 555-66-66</p>
+          <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
+          <div class="contacts__items">
+            <div class="contacts__item-container">
+              <h3 class="contacts-item__title">Звоните:</h3>
+              <p class="contacts-item__contact">+7 (812) 555-66-66</p>
             </div>
-            <div class="contacts-item">
-              <h2 class="contacts-item__title">Пишите:</h2>
-              <p class="contacts-item__contact contacts-item__contact--mail">mail@htmlacademy.ru</p>
+            <div class="contacts__item-container">
+              <h3 class="contacts-item__title">Пишите:</h3>
+              <p class="contacts-item__contact">mail@htmlacademy.ru</p>
             </div>
-            <div class="contacts-item">
-              <h2 class="contacts-item__title">Приезжайте в гости:</h2>
-              <p class="contacts-item__contact contacts-item__contact--addr">ул. Большая Конюшенная, 19/8</p>
+            <div class="contacts__item-container">
+              <h3 class="contacts-item__title">Приезжайте в гости:</h3>
+              <p class="contacts-item__contact">ул. Большая Конюшенная, 19/8</p>
             </div>
           </div>
         </div>
       </section>
-
       <div class="map" id="map-canvas"></div>
     </div>
-
   </footer>
 
 </body>
