Add footer to form.html

--- a/source/form.html
+++ b/source/form.html
@@ -153,7 +153,26 @@
     </form>
   </main>
 
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo" href="index.html">
+        <img class="page-footer__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
+      </a>
 
+      <section class="social-links">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <a class="social-link social-link--twitter" href="#">Twitter</a>
+        <a class="social-link social-link--facebook" href="#">Facebook</a>
+        <a class="social-link social-link--youtube" href="#">Youtube</a>
+      </section>
+
+      <section class="copyright">
+        <p class="copyright__text">Разработано
+          <a class="copyright__link" href="https://htmlacademy.ru/"></a>
+        </p>
+      </section>
+    </div>
+  </footer>
 
 </body>
 
