Add success and fail popup to form.html

--- a/source/form.html
+++ b/source/form.html
@@ -174,6 +174,23 @@
     </div>
   </footer>
 
-</body>
+  <div class="popup popup--success">
+    <div class="form__wrapper form-section--white">
+      <h2 class="popup__title">Ваша заявка отправлена</h2>
+      <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
+    </div>
+    <div class="form-wrapper form-section--grey">
+      <a class="form__btn--green" href="index.html">Закрыть окно</a>
+    </div>
+  </div>
 
+  <div class="popup popup--fail">
+    <div class="form__wrapper">
+      <h2 class="popup__title">Что-то пошло не так!</h2>
+      <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <a class="form__btn--green" href="#">ОК</a>
+    </div>
+  </div>
+
+</body>
 </html>
