--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 
 <body>
   <header class="page-header">
-    <h1 class="visually-hidden">Веб-страница PINK</h1>
+    <h2 class="visually-hidden">Веб-страница PINK</h2>
     <a class="page-header__logo" href="index.html">
     <img class="page-header__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
     </a>
@@ -103,14 +103,15 @@
             <ul class="contacts">
               <li>
                 <label class="form__title form__title--name" for="tel">Номер телефона</label>
-                <input class="contacts__item" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
+                <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
               </li>
               <li>
                 <label class="form__title form__title--name" for="email">Адрес почты</label>
-                <input class="contacts__item" type="email" name="email" id="email" placeholder="Введите почту" required>
+                <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
               </li>
             </ul>
           </fieldset>
+        </div>
       </section>
 
       <section class="form-section form-section--grey">
@@ -167,6 +168,7 @@
       </section>
 
       <section class="copyright">
+        <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
         <p class="copyright__text">Разработано
           <a class="copyright__link" href="https://htmlacademy.ru/"></a>
         </p>
@@ -193,4 +195,5 @@
   </div>
 
 </body>
+
 </html>
