--- a/source/photo.html
+++ b/source/photo.html
@@ -33,5 +33,30 @@
     </nav>
   </header>
 
+
+
+  <footer class="page-footer">
+    <div class="page-footer__wrapper">
+      <a class="page-footer__logo" href="index.html">
+        <img class="page-footer__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
+      </a>
+
+      <section class="social-links">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <a class="social-link social-link--twitter" href="#">Twitter</a>
+        <a class="social-link social-link--facebook" href="#">Facebook</a>
+        <a class="social-link social-link--youtube" href="#">Youtube</a>
+      </section>
+
+      <section class="copyright">
+        <h2 class="visually-hidden">Разработано компанией htmlacademy</h2>
+        <p class="copyright__text">Разработано
+          <a class="copyright__link" href="https://htmlacademy.ru/"></a>
+        </p>
+      </section>
+    </div>
+  </footer>
+
 </body>
+
 </html>
