--- a/source/form.html
+++ b/source/form.html
@@ -8,9 +8,8 @@
 
 <body>
   <header class="page-header">
-    <h2 class="visually-hidden">Веб-страница PINK</h2>
     <a class="page-header__logo" href="index.html">
-    <img class="page-header__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
+    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -44,7 +43,7 @@
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
       <div class="form__wrapper">
         <p class="form__description">Поделитесь своей историей и получите шанс выиграть ценный приз - 1000 миль на вашу бонусную карту!</p>
-        <section class="form-section form-section--white">
+        <section class="form__section form__section--white">
           <h2 class="visually-hidden">Заполните форму</h2>
           <div class="form__group">
             <label class="form__title form__title--name" for="surname">Фамилия:</label>
@@ -61,51 +60,53 @@
         </section>
       </div>
 
-      <section class="form-section form-section--grey">
+      <section class="form__section form__section--grey">
         <h2 class="visually-hidden">Заполните ваши достижения</h2>
         <div class="form__wrapper">
           <fieldset class="form__fieldset">
             <legend class="form__title">Ваши безбашенные достижения в путешествии</legend>
             <ul class="achievement">
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="shark" id="shark" checked>
-                <label class="achievement__item" for="shark">Сделал селфи с акулой</label>
-              </li>
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
-                <label class="achievement__item" for="sunburn">Обгорел на пляже</label>
-              </li>
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="chuck" id="chuck">
-                <label class="achievement__item" for="chuck">Видел Чака Норриса</label>
-              </li>
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
-                <label class="achievement__item" for="souvenirs">Накупил сувениров</label>
-              </li>
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="tower" id="tower" checked>
-                <label class="achievement__item" for="tower">Удержал башню</label>
-              </li>
-              <li>
-                <input class="form__input form__input--checkbox" type="checkbox" name="hotel" id="hotel">
-                <label class="achievement__item" for="hotel">Разгромил отель</label>
-              </li>
+              <div class="form__list form__list--achievement">
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="shark" id="shark" checked>
+                  <label class="achievement__item" for="shark">Сделал селфи с акулой</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
+                  <label class="achievement__item" for="sunburn">Обгорел на пляже</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="chuck" id="chuck">
+                  <label class="achievement__item" for="chuck">Видел Чака Норриса</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
+                  <label class="achievement__item" for="souvenirs">Накупил сувениров</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="tower" id="tower" checked>
+                  <label class="achievement__item" for="tower">Удержал башню</label>
+                </li>
+                <li>
+                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="hotel" id="hotel">
+                  <label class="achievement__item" for="hotel">Разгромил отель</label>
+                </li>
+              </div>
             </ul>
           </fieldset>
         </div>
       </section>
 
-      <section class="form-section form-section--white">
+      <section class="form__section form__section--white">
         <h2 class="visually-hidden">Заполните ваши номер и адрес электронной почты</h2>
         <div class="form__wrapper">
           <fieldset class="form__fieldset">
-            <ul class="contacts">
-              <li>
+            <ul>
+              <li class="form__group">
                 <label class="form__title form__title--name" for="tel">Номер телефона</label>
-                <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}">
+                <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{5}">
               </li>
-              <li>
+              <li class="form__group">
                 <label class="form__title form__title--name" for="email">Адрес почты</label>
                 <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
               </li>
@@ -114,7 +115,7 @@
         </div>
       </section>
 
-      <section class="form-section form-section--grey">
+      <section class="form__section form__section--grey">
         <h2 class="visually-hidden">Выберите платформу</h2>
         <div class="form__wrapper">
           <fieldset class="form__fieldset">
@@ -137,7 +138,7 @@
         </div>
       </section>
 
-      <section class="form-section form-section--white">
+      <section class="form__section form__section--white">
         <h2 class="visually-hidden">Ваш отзыв</h2>
         <div class="form__wrapper">
           <fieldset class="form__fieldset">
@@ -148,7 +149,7 @@
       </section>
 
       <div class="form__wrapper">
-        <button class="form__btn--green" type="submit">Отправить форму</button>
+        <button class="form-btn--green" type="submit">Отправить форму</button>
         <p class="form__required">* - обязательные поля</p>
       </div>
     </form>
@@ -157,7 +158,7 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <a class="page-footer__logo" href="index.html">
-        <img class="page-footer__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
+        <img class="page-footer__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
       </a>
 
       <section class="social-links">
@@ -177,17 +178,17 @@
   </footer>
 
   <div class="popup popup--success">
-    <div class="form__wrapper form-section--white">
+    <div class="popup__wrapper form-section--white">
       <h2 class="popup__title">Ваша заявка отправлена</h2>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
     </div>
-    <div class="form-wrapper form-section--grey">
+    <div class="form__wrapper form-section--grey">
       <a class="form__btn--green" href="index.html">Закрыть окно</a>
     </div>
   </div>
 
   <div class="popup popup--fail">
-    <div class="form__wrapper">
+    <div class="popup__wrapper">
       <h2 class="popup__title">Что-то пошло не так!</h2>
       <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
       <a class="form__btn--green" href="#">ОК</a>
