--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <h1 class="visually-hidden">Веб-страница PINK</h1>
     <a class="page-header__logo">
-    <img class="page-header__logo--image" src="http://placehold.it/150x100" alt="Логотип PINK">
+      <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -36,7 +36,7 @@
   <main class="page-main">
     <section class="page-intro">
       <h2 class="visually-hidden">Наше приложение!</h2>
-      <div class="intro__wrapper">
+      <div class="page-intro__wrapper">
         <img class="page-intro__image" src="http://placehold.it/150x100" alt="PINK">
         <section class="download-app">
           <div class="download-app__wrapper">
@@ -126,19 +126,19 @@
             </td>
           </tr>
           <tr>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Розовый фильтр</span></td>
           </tr>
           <tr>
-            <td class="price-table__service price-table__service--yes"><span class="price-table__service--mobile">Смайлики</span></td>
-            <td class="price-table__service price-table__service--yes"><span class="price-table__service--mobile">Смайлики</span></td>
-            <td class="price-table__service price-table__service--no"><span class="price-table__service--mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--yes"><span class="price-table__service-mobile">Смайлики</span></td>
+            <td class="price-table__service price-table__service--no"><span class="price-table__service-mobile">Смайлики</span></td>
           </tr>
           <tr>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
-            <td class="price-table__service price-table__service--?"><span class="price-table__service--mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
+            <td class="price-table__service price-table__service--?"><span class="price-table__service-mobile">Комментарии</span></td>
           </tr>
         </table>
         <p class="price__toggles slider__toggles">
@@ -156,7 +156,7 @@
       <section class="contacts">
         <div class="contacts__container">
           <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
-          <div class="contacts__items">
+          <div class="contacts__items contacts-item">
             <div class="contacts__item-container">
               <h3 class="contacts-item__title">Звоните:</h3>
               <p class="contacts-item__contact">+7 (812) 555-66-66</p>
