--- a/source/form.html
+++ b/source/form.html
@@ -65,33 +65,31 @@
         <div class="form__wrapper">
           <fieldset class="form__fieldset">
             <legend class="form__title">Ваши безбашенные достижения в путешествии</legend>
-            <ul class="achievement">
-              <div class="form__list form__list--achievement">
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="shark" id="shark" checked>
-                  <label class="achievement__item" for="shark">Сделал селфи с акулой</label>
-                </li>
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
-                  <label class="achievement__item" for="sunburn">Обгорел на пляже</label>
-                </li>
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="chuck" id="chuck">
-                  <label class="achievement__item" for="chuck">Видел Чака Норриса</label>
-                </li>
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
-                  <label class="achievement__item" for="souvenirs">Накупил сувениров</label>
-                </li>
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="tower" id="tower" checked>
-                  <label class="achievement__item" for="tower">Удержал башню</label>
-                </li>
-                <li>
-                  <input class="form-list__input form-list__input--checkbox" type="checkbox" name="hotel" id="hotel">
-                  <label class="achievement__item" for="hotel">Разгромил отель</label>
-                </li>
-              </div>
+            <ul class="form-list">
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="shark" id="shark" checked>
+                <label class="form-list__item" for="shark">Сделал селфи с акулой</label>
+              </li>
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="sunburn" id="sunburn" checked>
+                <label class="form-list__item" for="sunburn">Обгорел на пляже</label>
+              </li>
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="chuck" id="chuck">
+                <label class="form-list__item" for="chuck">Видел Чака Норриса</label>
+              </li>
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="souvenirs" id="souvenirs">
+                <label class="form-list__item" for="souvenirs">Накупил сувениров</label>
+              </li>
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="tower" id="tower" checked>
+                <label class="form-list__item" for="tower">Удержал башню</label>
+              </li>
+              <li>
+                <input class="form-list__input form-list__input--checkbox" type="checkbox" name="hotel" id="hotel">
+                <label class="form-list__item" for="hotel">Разгромил отель</label>
+              </li>
             </ul>
           </fieldset>
         </div>
@@ -100,18 +98,14 @@
       <section class="form__section form__section--white">
         <h2 class="visually-hidden">Заполните ваши номер и адрес электронной почты</h2>
         <div class="form__wrapper">
-          <fieldset class="form__fieldset">
-            <ul>
-              <li class="form__group">
-                <label class="form__title form__title--name" for="tel">Номер телефона</label>
-                <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{5}">
-              </li>
-              <li class="form__group">
-                <label class="form__title form__title--name" for="email">Адрес почты</label>
-                <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
-              </li>
-            </ul>
-          </fieldset>
+          <div class="form__group">
+            <label class="form__title form__title--name" for="tel">Номер телефона</label>
+            <input class="form__input" type="tel" name="tel" id="tel" placeholder="Номер, пожалуйста" pattern="[0-9]{1}-[0-9]{3}-[0-9]{7}">
+          </div>
+          <div class="form__group">
+            <label class="form__title form__title--name" for="email">Адрес почты</label>
+            <input class="form__input" type="email" name="email" id="email" placeholder="Введите почту" required>
+          </div>
         </div>
       </section>
 
@@ -149,7 +143,7 @@
       </section>
 
       <div class="form__wrapper">
-        <button class="form-btn--green" type="submit">Отправить форму</button>
+        <button class="form__btn" type="submit">Отправить форму</button>
         <p class="form__required">* - обязательные поля</p>
       </div>
     </form>
@@ -178,11 +172,11 @@
   </footer>
 
   <div class="popup popup--success">
-    <div class="popup__wrapper form-section--white">
+    <div class="popup__wrapper">
       <h2 class="popup__title">Ваша заявка отправлена</h2>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
     </div>
-    <div class="form__wrapper form-section--grey">
+    <div class="form__wrapper">
       <a class="form__btn--green" href="index.html">Закрыть окно</a>
     </div>
   </div>
