Исправил элемент блока поправляя класс photo.html

--- a/source/photo.html
+++ b/source/photo.html
@@ -180,8 +180,8 @@
               <div class="filter-scale__toggle"></div>
             </div>
           </div>
-          <button class="filter-scale__btn" type="submit">Запостить</button>
-          <button class="filter-scale__btn" type="submit">Отмена</button>
+          <button class="filter-range__btn" type="submit">Запостить</button>
+          <button class="filter-range__btn" type="submit">Отмена</button>
         </div>
       </div>
     </section>
