Подправил Разметку index.html

--- a/source/index.html
+++ b/source/index.html
@@ -42,9 +42,9 @@
           <div class="download-app__wrapper">
             <a class="download-app__btn" href="#">Скачать приложение</a>
             <div class="download-app__platforms">
-              <div class="platform platform--Apple"></div>
-              <div class="platform platform--Android"></div>
-              <div class="platform platform--Windows"></div>
+              <div class="download-app__Apple"></div>
+              <div class="download-app__Android"></div>
+              <div class="download-app__Windows"></div>
             </div>
             <p class="download-app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
           </div>
@@ -156,16 +156,16 @@
       <section class="contacts">
         <div class="contacts__container">
           <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
-          <div class="contacts__items contacts-item">
-            <div class="contacts__item-container">
+          <div class="contacts__items">
+            <div class="contacts-item">
               <h3 class="contacts-item__title">Звоните:</h3>
               <p class="contacts-item__contact">+7 (812) 555-66-66</p>
             </div>
-            <div class="contacts__item-container">
+            <div class="contacts-item">
               <h3 class="contacts-item__title">Пишите:</h3>
               <p class="contacts-item__contact">mail@htmlacademy.ru</p>
             </div>
-            <div class="contacts__item-container">
+            <div class="contacts-item">
               <h3 class="contacts-item__title">Приезжайте в гости:</h3>
               <p class="contacts-item__contact">ул. Большая Конюшенная, 19/8</p>
             </div>
