--- a/source/form.html
+++ b/source/form.html
@@ -115,16 +115,16 @@
           <fieldset class="form__fieldset">
             <legend class="form__title">С каким приложением путешествовали?</legend>
             <ul class="platform">
-              <li class="platform__item">
-                <input class="form__input form__input--radio" type="radio" name="platform" value="Pink для iOS" id="iOS" checked>
+              <li>
+                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink для iOS" id="iOS" checked>
                 <label class="platform__title" for="iOS">Pink для iOS</label>
               </li>
-              <li class="platform__item">
-                <input class="form__input form__input--radio" type="radio" name="platform" value="Pink на Android" id="Android">
+              <li>
+                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Pink на Android" id="Android">
                 <label class="platform__title" for="Android">Pink на Android</label>
               </li>
-              <li class="platform__item">
-                <input class="form__input form__input--radio" type="radio" name="platform" value="Windows Phone" id="Windows">
+              <li>
+                <input class="platform__input platform__input--radio" type="radio" name="platform" value="Windows Phone" id="Windows">
                 <label class="platform__title" for="Windows">Windows Phone</label>
               </li>
             </ul>
@@ -157,9 +157,9 @@
 
       <section class="social-links">
         <h2 class="visually-hidden">Социальные сети</h2>
-        <a class="social-link social-link--twitter" href="#">Twitter</a>
-        <a class="social-link social-link--facebook" href="#">Facebook</a>
-        <a class="social-link social-link--youtube" href="#">Youtube</a>
+        <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
+        <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
+        <a class="social-links__btn social-links__btn--youtube" href="#">Youtube</a>
       </section>
 
       <section class="copyright">
@@ -176,8 +176,8 @@
       <h2 class="popup__title">Ваша заявка отправлена</h2>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
     </div>
-    <div class="form__wrapper">
-      <a class="form__btn--green" href="index.html">Закрыть окно</a>
+    <div class="popup__wrapper">
+      <a class="popup__btn popup__btn--close" href="index.html">Закрыть окно</a>
     </div>
   </div>
 
@@ -185,7 +185,7 @@
     <div class="popup__wrapper">
       <h2 class="popup__title">Что-то пошло не так!</h2>
       <p class="popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <a class="form__btn--green" href="#">ОК</a>
+      <a class="popup__btn popup__btn--ok" href="#">ОК</a>
     </div>
   </div>
 
