Финальная поправка index.html

--- a/source/index.html
+++ b/source/index.html
@@ -42,9 +42,9 @@
           <div class="download-app__wrapper">
             <a class="download-app__btn" href="#">Скачать приложение</a>
             <div class="download-app__platforms">
-              <div class="download-app__Apple"></div>
-              <div class="download-app__Android"></div>
-              <div class="download-app__Windows"></div>
+              <div class="download-app__platform--Apple"></div>
+              <div class="download-app__platform--Android"></div>
+              <div class="download-app__platform--Windows"></div>
             </div>
             <p class="download-app__description">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
           </div>
