--- a/source/photo.html
+++ b/source/photo.html
@@ -153,7 +153,7 @@
               </div>
               <div class="posts-item__like">
                 <svg class="posts-item__icon" width="20" height="20"></svg>
-                <span class="posts-item__like--amount">Нравится: 2560</span>
+                <span class="posts-item__like-amount">Нравится: 2560</span>
               </div>
             </div>
           </li>
@@ -194,9 +194,9 @@
       </a>
       <section class="social-links">
         <h2 class="visually-hidden">Социальные сети</h2>
-        <a class="social-link social-link--twitter" href="#">Twitter</a>
-        <a class="social-link social-link--facebook" href="#">Facebook</a>
-        <a class="social-link social-link--youtube" href="#">Youtube</a>
+        <a class="social-links__btn social-links__btn--twitter" href="#">Twitter</a>
+        <a class="social-links__btn social-links__btn--facebook" href="#">Facebook</a>
+        <a class="social-links__btn social-links__btn--youtube" href="#">Youtube</a>
       </section>
 
       <section class="copyright">
