Подправил разметкуphoto.html

--- a/source/photo.html
+++ b/source/photo.html
@@ -58,7 +58,7 @@
               </div>
               <div class="posts-item__like">
                 <svg class="posts-item__icon" width="20" height="20"></svg>
-                <span class="posts-item__like-amount">Нравится: 215</span>
+                <span class="posts-item__like--amount">Нравится: 215</span>
               </div>
             </div>
           </li>
@@ -154,7 +154,7 @@
               </div>
               <div class="posts-item__like">
                 <svg class="posts-item__icon" width="20" height="20"></svg>
-                <span class="posts-item__like-amount">Нравится: 2560</span>
+                <span class="posts-item__like--amount">Нравится: 2560</span>
               </div>
             </div>
           </li>
