--- a/source/form.html
+++ b/source/form.html
@@ -136,7 +136,7 @@
       <section class="form__section form__section--white">
         <h2 class="visually-hidden">Ваш отзыв</h2>
         <div class="form__wrapper">
-          <fieldset class="form__fieldset">
+          <fieldset>
             <legend class="form__title">Опишите свои эмоции</legend>
             <textarea class="form__input form__input--reference" name="reference" rows="8" cols="80" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </fieldset>
@@ -173,11 +173,11 @@
   </footer>
 
   <div class="popup popup--success">
-    <div class="popup__wrapper">
+    <div class="popup__wrapper-top">
       <h2 class="popup__title">Ваша заявка отправлена</h2>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим её и оповестим вас.</p>
     </div>
-    <div class="popup__wrapper">
+    <div class="popup__wrapper-bott">
       <a class="popup__btn popup__btn--close" href="index.html">Закрыть окно</a>
     </div>
   </div>
