--- a/source/index.html
+++ b/source/index.html
@@ -11,23 +11,23 @@
   <header class="page-header">
     <h1 class="visually-hidden">Веб-страница PINK</h1>
     <a class="page-header__logo">
-      <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+      <!--<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item stile-list__item--active">
-            <a>Главная</a>
+            <a class="site-list__link">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
+            <a class="site-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html">Конкурс</a>
+            <a class="site-list__link" href="form.html">Конкурс</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML Academy</a>
+            <a class="site-list__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
     <section class="page-intro">
       <h2 class="visually-hidden">Наше приложение!</h2>
       <div class="page-intro__wrapper">
-        <img class="page-intro__image" src="http://placehold.it/150x100" alt="PINK">
+        <!--<img class="page-intro__image" src="http://placehold.it/150x100" alt="PINK">-->
         <section class="download-app">
           <div class="download-app__wrapper">
             <a class="download-app__btn" href="#">Скачать приложение</a>
