--- a/source/photo.html
+++ b/source/photo.html
@@ -10,23 +10,23 @@
 <body>
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
-    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+    <!--<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item stile-list__item--active">
-            <a href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a>Фотографии</a>
+            <a class="site-list__link">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html">Конкурс</a>
+            <a class="site-list__link" href="form.html">Конкурс</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML Academy</a>
+            <a class="site-list__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
       <div class="posts__wrapper">
         <div class="posts-title">
           <h1 class="posts-title__heading">Фотографии пользователей</h1>
-          <img class="posts-title__image" src="http://placehold.it/150x100" alt="PINK">
+          <!--<img class="posts-title__image" src="http://placehold.it/150x100" alt="PINK">-->
         </div>
         <div class="posts-slogan">
           <h2 class="posts-slogan__heading">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
