Add new class for <a> and elements form.html

--- a/source/form.html
+++ b/source/form.html
@@ -10,23 +10,23 @@
 <body>
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
-    <img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">
+    <!--<<img class="page-header__logo-image" src="http://placehold.it/150x100" alt="Логотип PINK">-->
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">Открыть меню</button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item stile-list__item--active">
-            <a href="index.html">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фотографии</a>
+            <a class="site-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a>Конкурс</a>
+            <a class="site-list__link">Конкурс</a>
           </li>
           <li class="site-list__item">
-            <a href="#">HTML Academy</a>
+            <a class="site-list__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </div>
@@ -35,7 +35,7 @@
 
   <main class="page-main">
     <section class="page-title">
-      <img class="page-title__image" src="http://placehold.it/150x100" alt="PINK">
+      <!--<<img class="page-title__image" src="http://placehold.it/150x100" alt="PINK">-->
       <div class="page-title__container">
         <h1 class="page-title__heading">Конкурс на самое безбашенное путешествие с Пинк</h1>
       </div>
