--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,6 @@
   <title>HTML Academy: Пинк</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
@@ -89,7 +88,7 @@
         <div class="proof__content">
           <h2 class="proof__title">Эффект на 24 часа!</h2>
           <p class="proof__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
-          <a class="proof-link" href="#">Узнать больше об исследовании</a>
+          <a class="proof__link" href="#">Узнать больше об исследовании</a>
         </div>
       </div>
     </section>
@@ -170,7 +169,7 @@
     </section>
 
     <section class="contacts">
-      <div class="ontacts__wrapper">
+      <div class="Contacts__wrapper">
         <h2 class="visually-hidden">Связаться с нами:</h2>
         <div class="contacts__container">
           <h2 class="contacts__heading">Остались вопросы? Свяжитесь с нами!</h2>
